# AGI01-GitPractice01

./: .gitignore  .pre-commit-config.yaml  README.md  README_zh.md  environment.yml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
docs/assets/stylesheets/: extra.css
src/project_name/: __init__.py
